frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: devopschallenge
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: app
          image: eminekibar/devopschallenge-frontend:manual
          ports: [{ containerPort: 52369 }]
          readinessProbe:
            httpGet: { path: "/", port: 52369 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: "/", port: 52369 }
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "300m", memory: "256Mi" }
