frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: devopschallenge
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: app.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http    # sayı yerine İSİM kullan (hata riski sıfıra iner)
