allow-monitoring-scrape.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-scrape
  namespace: devopschallenge
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - prometheus
          - prometheus-operator
          - prometheus-kube-state-metrics
    ports:
    - protocol: TCP
      port: 9100
    - protocol: TCP
      port: 9200
