default-deny-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: devopschallenge
spec:
  podSelector: {}
  policyTypes:
    - Ingress
